增加 按钮 和 修改自适应

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ body{
 	float: left;
 	overflow: hidden;
 	background-image: url("../img/bg.jpg");
+	background-repeat: no-repeat;
 }
 .top{
 	width: 640px;
